--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 
 <header class="main_header">
-  <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}W<span>oo</span>bb{% endif %}</a>
+  <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}w<span>oo</span>bb{% endif %}</a>
   <nav class="main_menu">
     <a href="{{site.baseurl}}/about/">About</a>
     <a href="{{site.baseurl}}/contact/">Contact</a>
